Fixxed footer overlap

--- a/src/main/webapp/WEB-INF/app/resources/styles/sass/app.scss
+++ b/src/main/webapp/WEB-INF/app/resources/styles/sass/app.scss
@@ -18,6 +18,10 @@ main footer {
 }
 
 
+.main {
+  padding-bottom: 35px;
+}
+
 .tab-nav {
   margin-top: 12px;
 }
